--- a/template.yaml
+++ b/template.yaml
@@ -29,7 +29,7 @@ Resources:
     Metadata:
       DockerTag: go1.x-v1
       DockerContext: ./todo-app
-      Dockerfile: Dockerfile
+      Dockerfile: Dockerfile.production
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
