--- a/template.yaml
+++ b/template.yaml
@@ -22,7 +22,7 @@ Resources:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /{proxy+}
-            Method: GET
+            Method: ANY
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
           PARAM1: VALUE
@@ -46,6 +46,20 @@ Resources:
           AttributeType: S
       KeySchema: 
         - AttributeName: ID
+          KeyType: HASH
+      BillingMode: PAY_PER_REQUEST
+
+  TodoTable:
+    Type: AWS::DynamoDB::Table
+    Properties: 
+      TableName: Sequences
+      AttributeDefinitions:
+        - AttributeName: Name
+          AttributeType: S
+        - AttributeName: ID
+          AttributeType: N
+      KeySchema: 
+        - AttributeName: Name
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
 
