--- a/.github/workflows/deploy-swagger.yaml
+++ b/.github/workflows/deploy-swagger.yaml
@@ -26,7 +26,7 @@ jobs:
           cd todo-app
           swag init
 
-      - name: clone swagger ui repository
+      - name: Clone swagger ui repository
         env:
           DEPLOY_KEY: ${{ secrets.SWAGGER_REPO_DEPLOY_KEY }}
           GIT_SSH_COMMAND: ssh -i ~/deploy_key.pem
@@ -35,13 +35,8 @@ jobs:
           chmod 600 ~/deploy_key.pem
           cd ../
           git clone git@github.com:Saza-ku/swagger-ui.git
-      
-      - name: ls and pwd
-        run: |
-          ls
-          pwd
 
-      - name: push to swagger ui repository
+      - name: Push to swagger ui repository
         env:
           GIT_SSH_COMMAND: ssh -i ~/deploy_key.pem -o StrictHostKeyChecking=no -F /dev/null
         run: |
