--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,5 +22,4 @@ jobs:
         run: sam build
 
       - name:  Sam deploy
-        run: sam deploy --no-fail-on-empty-changeset \
-               --no-confirm-changeset
+        run: sam deploy --no-fail-on-empty-changeset --no-confirm-changeset
