--- a/todo-app/Dockerfile.production
+++ b/todo-app/Dockerfile.production
@@ -1,13 +1,14 @@
-FROM public.ecr.aws/bitnami/golang:1.16 as build-image
-
-WORKDIR /go/src
-COPY ./ ./
-
-RUN go build -o ../bin
-
-FROM public.ecr.aws/lambda/go:1
-
-COPY --from=build-image /go/bin/ /var/task/
-
-# Command can be overwritten by providing a different command in the template directly.
-CMD ["todo-app"]
+FROM public.ecr.aws/lambda/provided:al2 as build
+# install compiler
+RUN yum install -y golang
+RUN go env -w GOPROXY=direct
+# cache dependencies
+ADD go.mod go.sum ./
+RUN go mod download
+# build
+ADD . .
+RUN go build -o /main
+# copy artifacts to a clean image
+FROM public.ecr.aws/lambda/provided:al2
+COPY --from=build /main /main
+ENTRYPOINT ["/main"] 
